@@ -52,7 +52,7 @@
           <em> Date:</em>
         </TD>
         <TD VALIGN="top">
-          [::xotcl::rcs date {$Date: 2004/11/14 01:07:17 $}]
+          [::xotcl::rcs date {$Date: 2004/11/14 17:36:36 $}]
         </TD>
       </TR>
     </TABLE>
